# 2real-team-framework

./: .gitignore  CONTRIBUTING.md  README.md
.claude/: CLAUDE.md
.claude/skills/: close-stale-issues.md  plan-phase.md  retro.md  review-pr.md  wave-end.md  wave-start.md
.claude/team/: charter.md  feedback_log.md  trust_matrix.md
.claude/team/roster/: manager_hiro_morales.md  qa_engineer_tariq_morales.md  software_engineer_ibrahim_el_amin.md  software_engineer_paloma_gupta.md  tech_lead_nia_rossi.md
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml
docs/: prd.md
examples/: data-pipeline.yaml  fullstack-monorepo.yaml  library.yaml
node/: package.json  tsconfig.json  vitest.config.ts
node/scripts/: copy-shared.js
node/src/: bootstrap.ts  index.ts  personas.ts  presets.ts  templates.ts
node/tests/: cli.test.ts  personas.test.ts  yaml-config.test.ts
presets/: data-pipeline.json  fullstack-monorepo.json  library.json
python/: hatch_build.py  pyproject.toml
python/src/real_team/: __init__.py  bootstrap.py  cli.py  models.py  personas.py  presets.py  templates.py
python/tests/: test_cli.py  test_personas.py  test_yaml_config.py
skills/: close-stale-issues.md.mustache  plan-phase.md.mustache  retro.md.mustache  review-pr.md.mustache  wave-end.md.mustache  wave-start.md.mustache
templates/: CLAUDE.md.mustache  charter.md.mustache  feedback-log.md.mustache  roster-card.md.mustache  skill.md.mustache  trust-matrix.md.mustache
