[project]
name = "2real-team-framework"
version = "0.1.0"
description = "Drop-in AI agent team framework for Claude Code projects"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "chevron>=0.14",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
"2real-team" = "real_team.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/real_team"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
