[project]
name = "2real-team-framework"
version = "0.2.0"
description = "Drop-in AI agent team framework for Claude Code projects"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
readme = "../README.md"
authors = [
    {name = "2real Team", email = "2real-team@users.noreply.github.com"},
]
keywords = ["claude", "ai", "agent", "team", "framework", "claude-code", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "chevron>=0.14",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ai = ["anthropic>=0.40"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]

[project.scripts]
"2real-team" = "real_team.cli:app"

[project.urls]
Homepage = "https://github.com/parametrization/2real-team-framework"
Repository = "https://github.com/parametrization/2real-team-framework"
"Bug Tracker" = "https://github.com/parametrization/2real-team-framework/issues"
Documentation = "https://github.com/parametrization/2real-team-framework#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/real_team"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "pyproject.toml",
    "hatch_build.py",
]

[tool.hatch.build.targets.sdist.force-include]
"../templates" = "templates"
"../presets" = "presets"
"../skills" = "skills"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["real_team"]

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
